--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -9,6 +9,7 @@
  </head>
  <body class="full-height-with-header">
  <header>
+  <a class="skip-link" href='#content'>Skip to content</a>
   <nav>
     <ul class="horizontal-list">
       <% top_level_nav.each_with_index do |section, i| %>
@@ -21,7 +22,7 @@
   <nav>
     <%= render_nav(navigation) %>
   </nav>
-  <article>
+  <article name="content">
     <h1><%= title %></h1>
     <%= content %>
   </article>
