--- a/templates/nav_section.html.erb
+++ b/templates/nav_section.html.erb
@@ -1,13 +1,17 @@
 <% unless navigation.empty? %>
-<% navigation.each do |index| %>
-  <%= header_tag(level) { link_note(index) } %>
-  <ul class="navigation-list">
-    <% unless index.directories.empty? %>
-    <li><%= render_nav(index.directories, level: level + 1) %></li>
+  <% navigation.each do |index| %>
+    <% if level == max_level %>
+    <li><%= link_note(index) %></li>
+    <% else %>
+    <%= header_tag(level) { link_note(index) } %>
+    <ul class="navigation-list">
+      <% unless index.directories.empty? %>
+      <li><%= render_nav(index.directories, level: level + 1, max_level: max_level) %></li>
+      <% end %>
+      <% index.notes.each do |nav_entry| %>
+        <li><%= link_note(nav_entry) %></li>
+      <% end %>
+    </ul>
     <% end %>
-    <% index.notes.each do |nav_entry| %>
-      <li><%= link_note(nav_entry) %></li>
-    <% end %>
-  </ul>
-<% end %>
+  <% end %>
 <% end %>
