--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -20,7 +20,7 @@
  </header>
  <div class="optional-sidebar-layout optional-sidebar-layout-full-height">
   <nav>
-    <%= render_nav(navigation) %>
+    <%= render_nav(navigation, max_level: 2) %>
   </nav>
   <article name="content">
     <h1><%= title %></h1>
