--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -22,7 +22,7 @@
   <nav>
     <%= render_nav(navigation, max_level: 2) %>
   </nav>
-  <article name="content">
+  <article id="content">
     <h1><%= title %></h1>
     <%= content %>
   </article>
