--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="<%= meta_description %>">
-  <link rel="stylesheet" type="text/css" href="/site.css">
+  <link rel="stylesheet" type="text/css" href="/assets/site.css">
  </head>
  <body class="full-height-with-header">
  <header>
