Allow both flex columns to grow without limit
- If the sidebar can't grow, then it ends up to narrow if it wraps onto
  a new flex stack
- If the article has a max-inline-size, then it truncates code blocks in addition
  to text

Instead of applying the max line width to the article, just apply it to
article paragraphs.

--- a/assets/site.css
+++ b/assets/site.css
@@ -165,13 +165,13 @@ Usage:
   display: flex;
   flex-direction: row;
   flex-wrap: wrap-reverse;
-  background-color: var(--theme-primary);
 }
 
 header {
   background-color: var(--theme-black);
   color: var(--theme-background);
   padding: var(--text-padding-small);
+  font-size: var(--font-size-smallish);
 }
 
 header nav a {
@@ -179,19 +179,22 @@ header nav a {
 }
 
 .optional-sidebar-layout > nav {
-  flex: 0 25ch;
+  flex: 1 25ch;
   color: var(--theme-background);
   background-color: var(--theme-primary);
   padding: var(--text-padding-small);
 }
 
 .optional-sidebar-layout > article {
-  flex: 3 50ch;
+  flex: 10 50ch;
   padding: var(--text-padding-medium);
-  max-inline-size: var(--max-line-width);
   font-size: var(--font-size-medium);
   color: var(--theme-primary);
   background-color: var(--theme-background);
+}
+
+article p {
+  max-width: var(--max-line-width);
 }
 
 .navigation-list {
