--- a/assets/site.css
+++ b/assets/site.css
@@ -41,18 +41,19 @@ html {
   --theme-link: #0001b5;
   --theme-highlight: #d4bfff;
 
-  --font-size-very-small: 0.75rem;   /* 12px */
-  --font-size-quite-small: 0.875rem; /* 14px */
   --font-size-small: 1rem;           /* 16px */
   --font-size-smallish: 1.125rem;    /* 18px */
   --font-size-medium: 1.25rem;       /* 20px */
   --font-size-quite-big: 1.5rem;     /* 24px */
   --font-size-big: 2rem;             /* 32px */
   --font-size-very-big: 2.5rem;      /* 40px */
-  --font-size-very-very-big: 3rem;   /* 48px */
-  --font-size-giant: 3.75rem;        /* 60px */
 
   --standard-line-height: 1.5;
+
+  --spacing-1: 0.25rem;
+  --spacing-4: 1rem;
+  --spacing-6: 1.5rem;
+
 
   /*
     Vertical spacings that are aligned with the medium font's line height
@@ -61,12 +62,6 @@ html {
   --vertical-space-2: calc(var(--font-size-medium) * var(--standard-line-height) * 2);
   --vertical-space-3: calc(var(--font-size-medium) * var(--standard-line-height) * 3);
   --vertical-space-4: calc(var(--font-size-medium) * var(--standard-line-height) * 4);
-
-  --fixed-spacing-small: 8px;
-
-  --text-padding-very-small: 0.5ch;
-  --text-padding-small: 0.5lh 1ch;
-  --text-padding-medium: 0.5lh 1.5ch;
 
   --max-line-width: 70ch;
 }
@@ -169,8 +164,8 @@ Usage:
 
 header {
   background-color: var(--theme-black);
-  color: var(--theme-background);
-  padding: var(--text-padding-small);
+  color: var(--theme-back1round);
+  padding: var(--spacing-4);
   font-size: var(--font-size-smallish);
 }
 
@@ -182,12 +177,12 @@ header nav a {
   flex: 1 25ch;
   color: var(--theme-background);
   background-color: var(--theme-primary);
-  padding: var(--text-padding-small);
+  padding: 0.5lh 1ch;
 }
 
 .optional-sidebar-layout > article {
   flex: 10 50ch;
-  padding: var(--text-padding-medium);
+  padding: var(--spacing-6);
   font-size: var(--font-size-medium);
   color: var(--theme-primary);
   background-color: var(--theme-background);
@@ -200,13 +195,15 @@ article p {
 .navigation-list {
   list-style-type: none;
   font-size: var(--font-size-smallish);
-  margin: 0;
   padding: 0;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: var(--spacing-4);
+  margin-bottom: 1lh;
 }
 
-.navigation-list {
-  margin-left: var(--fixed-spacing-small);
-  margin-bottom: var(--fixed-spacing-small);
+.navigation-list li {
+  margin-bottom: 0.25lh;
 }
 
 .horizontal-list {
@@ -224,7 +221,7 @@ article p {
   display: block;
   background-color: var(--theme-primary);
   flex-shrink: 1;
-  padding: var(--text-padding-very-small);
+  padding: var(--spacing-0);
 }
 
 .skip-link {
@@ -253,8 +250,8 @@ nav a {
 
 nav h1 {
   font-size: var(--font-size-medium);
-  margin-bottom: 0;
   margin-top: 0.5lh;
+  margin-bottom: 0.25lh;
 }
 
 nav h1:first-child {
@@ -263,8 +260,8 @@ nav h1:first-child {
 
 nav h2, nav h3, nav h4, nav h5 {
   font-size: var(--font-size-smallish);
-  margin-bottom: 0;
-  margin-top: 0.5lh;
+  margin-top: calc(2 * (var(--vertical-space-2) - 1lh) / 3);
+  margin-bottom: calc((var(--vertical-space-2) - 1lh) / 3);
 }
 
 nav h2:first-child, h3:first-child, h4:first-child, h5:first-child {
