--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -26,7 +26,11 @@
   </nav>
   <article id="content">
     <h1><%= title %></h1>
+    <% if content.nil? %>
+    <%= render_index(children) %>
+    <% else %>
     <%= content %>
+    <% end %>
   </article>
  </div>
  </body>
