--- a/templates/breadcrumb.html.erb
+++ b/templates/breadcrumb.html.erb
@@ -1,4 +1,4 @@
-<% unless page.parent.nil? || page.parent.parent.nil? %>
+<% unless page.parent.nil? %>
 <nav id="breadcrumb" aria-label="Breadcrumb trail">
   <ul>
     <% breadcrumbs.each do |breadcrumb| %><li><%= link_page(breadcrumb) %></li><% end %><li><%= escape(page.title) %></li>
