--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -22,7 +22,7 @@
  </header>
  <div class="optional-sidebar-layout optional-sidebar-layout-full-height">
   <nav id="sidebar-nav" aria-label="Site navigation">
-    <%= render_nav(navigation, max_level: 2) %>
+    <%= render_nav(navigation_root, max_level: 2) %>
   </nav>
   <article id="content">
     <%= render_breadcrumbs(page) %>
