--- a/assets/site.css
+++ b/assets/site.css
@@ -52,7 +52,9 @@ html {
 
   --spacing-1: 0.25rem;
   --spacing-2: 0.5rem;
+  --spacing-3: 0.75rem;
   --spacing-4: 1rem;
+  --spacing-5: 1.25rem;
   --spacing-6: 1.5rem;
 
 
@@ -178,7 +180,7 @@ header nav a {
   flex: 1 25ch;
   color: var(--theme-background);
   background-color: var(--theme-primary);
-  padding: 0.5lh 1ch;
+  padding: var(--spacing-6);
 }
 
 .optional-sidebar-layout > article {
@@ -199,8 +201,10 @@ article p {
   padding: 0;
   margin-top: 0;
   margin-right: 0;
-  margin-left: var(--spacing-4);
+  margin-left: var(--spacing-1);
   margin-bottom: 1lh;
+  border-left: 3px solid var(--theme-background);
+  padding-left: var(--spacing-3);
 }
 
 .navigation-list li {
