--- a/assets/site.css
+++ b/assets/site.css
@@ -81,10 +81,35 @@ body {
 
 code {
   font-family: 'Source Code Pro', monospace;
+  color: #f8f8f2;
+  background: #272822;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  tab-size: 4;
+  hyphens: none;
+}
+
+ /* Code blocks */
+ pre {
+  padding: 1em;
+  overflow: auto;
+  border-radius: 0.3em;
+  background: #272822;
 }
 
 pre code {
   font-size: var(--font-size-smallish);
+}
+
+/* Inline code */
+:not(pre) > code {
+  padding: .25em .5em;
+  border-radius: .3em;
+  white-space: normal;
 }
 
 /*
@@ -111,9 +136,6 @@ p {
   hyphens: auto;
 }
 
-p code {
-  background-color: var(--theme-highlight);
-}
 
 h1 {
   font-size: var(--font-size-very-big);
@@ -203,9 +225,11 @@ header nav a {
   grid-column: 2;
 }
 
-.centered-content img, .centered-content pre.code-block, .centered-content video {
-  min-width: fit-content;
+.centered-content img, .centered-content pre, .centered-content video {
+  max-width: fit-content;
   grid-column: 1 / -1;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body >  {
@@ -337,4 +361,79 @@ body >  {
 #breadcrumb li:first-child:before {
   content: none;
   display: none;
+}
+
+/* Prism syntax highlighting tokens */
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #8292a2;
+}
+
+.token.punctuation {
+  color: #f8f8f2;
+}
+
+.token.namespace {
+  opacity: .7;
+}
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #f92672;
+}
+
+.token.boolean,
+.token.number {
+  color: #ae81ff;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #a6e22e;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+  color: #f8f8f2;
+}
+
+.token.atrule,
+.token.attr-value,
+.token.function,
+.token.class-name {
+  color: #e6db74;
+}
+
+.token.keyword {
+  color: #66d9ef;
+}
+
+.token.regex,
+.token.important {
+  color: #fd971f;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+.token.italic {
+  font-style: italic;
+}
+
+.token.entity {
+  cursor: help;
 }
